2008-09-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 530568 – Entries with visibility=FALSE should warn for caps-lock
	on

	* gtk/gtkentry.c: Add a tooltip-like Caps Lock warning for
	password entries. The warning is also triggered if an input method
	is active. The warning can be turned off using the
	GtkEntry::caps-lock-warning property. 
	Proposed by Owen Taylor

2008-09-29  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk.symbols:
	* gtk/gtkimmulticontext.[hc] (gtk_im_multicontext_get_context_id): 
	Add a getter for the the sealed context_id field.

2008-09-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 107000 – Add signals to GdkKeymap for monitoring caps_lock, etc.

	* gdk/gdk.symbols:
	* gdk/gdkkeys.[ch]: Add a new GdkKeymap::state-changed signal, and
	a gdk_keymap_get_caps_lock_state function.

	* gdk/x11/gdkkeys-x11.c: Implement it here. For now, only emit
	state-changed when caps lock lockedness changes. 

	* gdk/x11/gdkdisplay-x11.c: Also select for modifier lock status
	changes in the XkbSelectEventDetails call.

2008-09-29  Kristian Rietveld  <kris@imendio.com>

	Bug 487624 - Tooltips doesn't get updated if ther's no mouse motion
	over widget

	* gtk/gtkwidget.c (gtk_widget_set_property): after updating
	tooltip text or markup, call gtk_widget_trigger_tooltip_query()
	so that existing visible tooltips are updated.

2008-09-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 371908 – Password Entry broken
	Bug 317002 – Disable input method completely in GtkEntry when it's 
	in invisible mode.

	* gtk/gtkentry.c (gtk_entry_backspace): Make backspace behave
	properly when invisible.

	* gtk/gtkentry.c (gtk_entry_create_layout): Show preedit even if
	invisible. 

	* gtk/gtkentry.c (gtk_entry_set_visibility): Don't disable input
	methods when making the entry invisible.
	
2008-09-29  Emmanuele Bassi  <ebassi@linux.intel.com>

	* gdk/x11/gdkinput.c:
	(gdk_device_class_init), (gdk_device_finalize): Correctly chain
	up the finalize implementation.
